--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -96,6 +96,7 @@ spec:
             - -enable-snippets=true
             #- -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
             - -enable-cert-manager
+            - -enable-oidc
             #- -enable-external-dns
             #- -enable-app-protect
             #- -enable-app-protect-dos
