--- a/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-plus-ingress.yaml
@@ -98,7 +98,7 @@ spec:
             - -enable-cert-manager
             - -enable-oidc
             #- -enable-external-dns
-            #- -enable-app-protect
+            - -enable-app-protect
             #- -enable-app-protect-dos
             #- -v=3 # Enables extensive logging. Useful for troubleshooting.
             #- -enable-prometheus-metrics
